# stt-clients

./: CHANGELOG.md  README.md  rust-project.json
node/: .gitignore  README.md  package-lock.json  package.json  proto2Typescript.sh
node/examples/: account.ts  models.ts  nlpFunctions.ts  nlpProcess.ts  recognize.ts  streaming.ts  utils.ts
node/src/: index.ts
protos/: stt_service.proto
python/: CONTRIBUTING.md  README.md  proto2Python.sh  pyproject.toml
python/examples/: account.py  models.py  nlpFunctions.py  nlpProcess.py  recognize.py  streaming.py  utils.py
python/src/aristech_stt_client/proto/: stt_service_pb2.py  stt_service_pb2.pyi
rust/: Cargo.toml  README.md  build.rs  deny.toml
rust/examples/: account.rs  file.rs  live.rs  models.rs  nlpFunctions.rs  nlpProcess.rs
rust/examples/utils/: mod.rs
rust/protos/: stt_service.proto
rust/src/: lib.rs  stt.rs
