[package]
name = "aristech-stt-client"
description = "A Rust client library for the Aristech Speech-to-Text API"
version = "2.1.5"
edition = "2021"
repository = "https://github.com/aristech-de/stt-clients"
keywords = [
  "speech-recognition",
  "speech-to-text",
  "real-time",
  "streaming",
  "client-library",
]
homepage = "https://github.com/aristech-de/stt-clients/blob/main/rust/README.md"
authors = ["Martin Mende"]
license = "MIT"
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots", "gzip"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
prost = "0.13.4"
prost-types = "0.13.4"
hound = "3.5.1"

[dev-dependencies]
dotenv = "0.15.0"
cpal = "0.15.3"

[build-dependencies]
tonic-build = "0.12.3"

[[example]]
name = "file"
path = "examples/file.rs"

[[example]]
name = "live"
path = "examples/live.rs"

[[example]]
name = "account"
path = "examples/account.rs"

[[example]]
name = "models"
path = "examples/models.rs"

[[example]]
name = "nlpFunctions"
path = "examples/nlpFunctions.rs"

[[example]]
name = "nlpProcess"
path = "examples/nlpProcess.rs"
