[package]
name = "aristech-stt-client"
description = "A Rust client library for the Aristech Speech-to-Text API"
version = "3.1.2"
edition = "2021"
repository = "https://github.com/aristech-de/stt-clients"
keywords = [
  "speech-recognition",
  "speech-to-text",
  "real-time",
  "streaming",
  "client-library",
]
homepage = "https://github.com/aristech-de/stt-clients/blob/main/rust/README.md"
authors = ["Martin Mende"]
license = "MIT"
categories = ["api-bindings", "multimedia::audio"]

[dependencies]
tonic = { version = "0.14.1", features = [
  "tls-ring",
  "tls-native-roots",
  "gzip",
] }
tonic-prost = "0.14.1"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
prost = "0.14.1"
prost-types = "0.14.1"
hound = "3.5.1"
base64 = "0.22.1"

[dev-dependencies]
dotenv = "0.15.0"
cpal = "0.16.0"

[build-dependencies]
tonic-prost-build = "0.14.1"

[[example]]
name = "file"
path = "examples/file.rs"

[[example]]
name = "live"
path = "examples/live.rs"

[[example]]
name = "account"
path = "examples/account.rs"

[[example]]
name = "models"
path = "examples/models.rs"

[[example]]
name = "nlpFunctions"
path = "examples/nlpFunctions.rs"

[[example]]
name = "nlpProcess"
path = "examples/nlpProcess.rs"
